# flashcards_backend

./: .flake8  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  create_test_apkg.py  create_test_xlsx.py  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  test_all_parsers.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase4_edge_cases.py  test_phase5.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  enhancement.yml
.github/workflows/: lint.yml  test.yml
app/: db.py  helper.py  main.py
app/api/routers/: api_methods_enum.py
app/api/routers/ai/: router.py  service.py
app/api/routers/flashcards/: prefix_enum.py  router.py  service.py
app/api/routers/import_cards/: __init__.py  router.py  service.py
app/core/: config.py  security.py
app/models/flashcards/: card.py  collection.py  deck.py  note.py  review_log.py  template.py
app/schemas/flashcards/input/: card.py  deck.py
app/schemas/flashcards/output/: card.py  deck.py
app/schemas/import_cards/: __init__.py
docs/: architecture.md
flashcard_importer/: __init__.py  exceptions.py
flashcard_importer/models/: Flashcard.py  __init__.py  flashcard.py
flashcard_importer/parsers/: __init__.py  apkg_parser.py  base.py  csv_parser.py  txt_parser.py  xlsx_parser.py
flashcard_importer/utils/: __init__.py  deck_detector.py  html_handler.py  import_logger.py  multifield_handler.py  validators.py
test_data/: sample_anki.txt  sample_cards.csv  sample_cards.tsv  sample_cards.xlsx  sample_deck.apkg  simple.csv  simple_cards.txt
tests/: conftest.py
tests/ai/: test_ai_router.py
tests/flashcard_importer/: __init__.py  test_api.py  test_import_flashcards_advanced.py  test_parsers.py
tests/flashcards/: test_cards.py  test_decks.py
tests/unit/: test_card_service.py  test_deck_service.py  test_validation.py
